[package]
name = "svm"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4.17"
env_logger = "0.10.0"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
linfa = "0.7.1"
linfa-svm = "0.7.2"
rustfft = "6.3.0"
glob = "0.3.2"
ndarray = "0.15.6"
tokio = { version = "1", features = ["full"] }
